# compression

./: CMakeLists.txt  LICENSE  README.md  flags.cmake  test
dictionary/: CMakeLists.txt  dictionary.cpp  dictionary.hpp  suffix_automaton.cpp  suffix_automaton.hpp  trie.cpp  trie.hpp
huffman/: CMakeLists.txt  huffman.cpp  huffman.hpp
tester/: CMakeLists.txt  tester.cpp
union/: CMakeLists.txt  union.cpp  union.hpp
