cmake_minimum_required(VERSION 3.0)
project(tester)
set(CMAKE_BUILD_TYPE RELEASE)
set(CMAKE_SHARED_LIBRARY_LINK_CXX_FLAGS)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -Wall -Wextra -pedantic -Werror -fno-ident -O3 -march=native -mtune=native -fno-rtti -fno-exceptions -fno-asynchronous-unwind-tables")
set(SOURCES tester.cpp)
include_directories(${CMAKE_SOURCE_DIR}/huffman)
add_executable(${PROJECT_NAME} ${SOURCES})
target_link_libraries(${PROJECT_NAME} huffman)
