cmake_minimum_required(VERSION 3.0)
project(union)
include(${CMAKE_SOURCE_DIR}/flags.cmake)
set(SOURCES union.cpp)
include_directories(${CMAKE_SOURCE_DIR}/dictionary)
include_directories(${CMAKE_SOURCE_DIR}/huffman)
add_library(${PROJECT_NAME} ${LINKAGE_TYPE} ${SOURCES})
target_link_libraries(${PROJECT_NAME} dictionary)
target_link_libraries(${PROJECT_NAME} huffman)
